--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,4 @@
+@use "./theme";
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
 
 * {
@@ -11,20 +12,10 @@ body {
   font-family: "Orbitron", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: theme.$grey;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.fade-enter {
-  opacity: 0;
-  z-index: 1;
-}
-
-.fade-enter,
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 3000ms;
 }
